kubernetes/pod-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: mycontainer
    image: public.ecr.aws/docker/library/busybox:latest
    imagePullPolicy: Always
    command:
      - 'sh'
      - '-c'
      - 'echo "The credential is $SECRET_USERNAME:$SECRET_PASSWORD"'
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m" 
    securityContext:
      allowPrivilegeEscalation: false     
      readOnlyRootFilesystem: true                                   
  restartPolicy: Never
