kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  securityContext: # https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
    runAsNonRoot: false # to specify a user, we'll have to add a user in the dockerfile for the image below
  automountServiceAccountToken: false
  containers:
  - name: demo
    image: public.ecr.aws/nginx/nginx:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    securityContext:
      allowPrivilegeEscalation: false     
      readOnlyRootFilesystem: true
    volumeMounts:
    - name: cache
      mountPath: /var/cache/nginx
    - name: tmp
      mountPath: /var/run    
  volumes:
  - name: cache
    emptyDir: {}
  - name: tmp
    emptyDir: {}
