kubernetes/workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo
  name: demo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "demo-nginx-deployment"
  namespace: "demo"
spec:
  selector:
    matchLabels:
      app: "demo-nginx"
  replicas: 3
  template:
    metadata:
      labels:
        app: "demo-nginx"
        role: "backend"
    spec:
      automountServiceAccountToken: false
      containers:
      - image: public.ecr.aws/nginx/nginx:latest
        imagePullPolicy: Always
        name: "demo-nginx"
        resources:
          requests:
           memory: "64Mi"
           cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 80
        command: ["/bin/sh"]
        args: ["-c", "echo PodName: $MY_POD_NAME  NodeName: $MY_NODE_NAME  podIP: $MY_POD_IP> /usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'"]       
        volumeMounts:
        - name: cache
          mountPath: /var/cache/nginx
        - name: usr
          mountPath: /var/run    
        - name: tmp
          mountPath: /usr/share/nginx/html           
      volumes:
        - name: cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: usr
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: "demo-nginx"
    role: "backend"
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: load
  namespace: demo
spec:
  automountServiceAccountToken: false
  containers:
  - name: load
    image: public.ecr.aws/docker/library/busybox:1.36.1
    command: ["/bin/sh"]
    args: ["-c", "while sleep 0.5; do wget -q -O- http://demo-nginx-service; done"]
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    securityContext:
      allowPrivilegeEscalation: false     
      readOnlyRootFilesystem: true
    volumeMounts:
    - name: cache
      mountPath: /var/cache/nginx
    - name: tmp
      mountPath: /var/run    
  volumes:
  - name: cache
    emptyDir: {}
  - name: tmp
    emptyDir: {}
